--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@
         document.getElementById('checkBtn').click();
       }
     })();
+
+    const cabinetBtn = document.getElementById('cabinetBtn');
+    if (cabinetBtn) cabinetBtn.href = 'https://rickroll.it/rickroll.mp4';
   </script>
 </body>
 </html>
