--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <!-- ▼ ДОБАВЛЕНО: блок ожидания привязки на 30 сек -->
             <div id="pending" class="status info" style="margin-top:12px;">
               <div class="dot"></div>
-              <div id="pendingText">Привязка к аккаунту… (30 сек.)</div>
+              <div id="pendingText">Привязка к аккаунту…</div>
             </div>
             <!-- ▲ КОНЕЦ ДОБАВЛЕНИЯ -->
           </form>
