--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
         // ▼ ИЗМЕНЕНО: показать статичное «Привязка к аккаунту… (30 сек.)» без обратного отсчёта
         pending.classList.add('show');
-        pendingText.textContent = 'Привязка к аккаунту… (30 сек.)';
+        pendingText.textContent = 'Привязка к аккаунту…';
         // ▲ КОНЕЦ ИЗМЕНЕНИЯ
 
         // Через 30 секунд показать финальный экран
