--- a/redirect.html
+++ b/redirect.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KIBERPRIDE — переадресация…</title>
   <meta name="description" content="Переадресация в личный кабинет." />
-
   <style>
     :root{
       --bg-blur: 8px;
@@ -40,31 +39,16 @@
     }
     .header .title{font-size:clamp(22px,3.2vw,28px); font-weight:800; margin:0 0 4px;}
     .header .subtitle{opacity:.92; margin:0; font-size:14px}
-
     .content{padding:22px;}
     .p{margin:0 0 14px; color: var(--text-weak); line-height:1.55}
     .big{font-size:clamp(18px,2.6vw,22px); font-weight:800; margin:4px 0 12px;}
-
     .row{display:flex; align-items:center; gap:10px; color:#1e3a8a; background:#eff6ff; border:1px solid #dbeafe;
          border-radius:14px; padding:14px; margin:10px 0;}
     .dot{width:12px; height:12px; border-radius:50%; background:#3b82f6; flex:0 0 12px; animation:pulse 1.2s infinite ease-in-out;}
     @keyframes pulse {0%,100%{opacity:.35} 50%{opacity:1}}
-
     .timer{font-variant-numeric: tabular-nums; font-weight:800;}
     .progress-wrap{height:10px; background:#e8eeff; border-radius:999px; overflow:hidden; margin-top:12px;}
     .progress{height:100%; width:0%; background:linear-gradient(90deg, var(--brand), var(--brand2)); transition:width .5s;}
-
-    .actions{display:flex; gap:10px; margin-top:16px; flex-wrap:wrap}
-    .btn{
-      cursor:pointer; user-select:none; height:48px; border-radius:14px; border:0; padding:0 18px;
-      font-weight:800; letter-spacing:.2px; font-size:15px; color:#fff;
-      background:linear-gradient(120deg, #ff3d2e, #ff7a70);
-      box-shadow:0 10px 26px rgba(255,61,46,.35);
-    }
-    .btn.secondary{
-      background:linear-gradient(120deg, #64748b, #94a3b8);
-      box-shadow:0 10px 26px rgba(100,116,139,.35);
-    }
     .footer-brand{display:flex; justify-content:center; gap:8px; align-items:center; color:#c9d6ff; font-size:12px; margin-top:14px}
     .footer-brand strong{color:#fff}
   </style>
@@ -88,13 +72,6 @@
             <div class="progress-wrap"><div id="progressBar" class="progress"></div></div>
           </div>
         </div>
-
-        <div class="actions">
-          <button id="goNow" class="btn">Перейти сразу</button>
-          <button id="cancel" class="btn secondary">Отменить переадресацию</button>
-        </div>
-
-        <p class="p" style="margin-top:10px">Если ничего не произошло, нажмите «Перейти сразу».</p>
       </div>
     </section>
 
@@ -107,16 +84,13 @@
     const start = Date.now();
     const deadline = start + WAIT_MS;
 
-    // Берём цель из ?to=... (иначе оставим пустым)
+    // Берём цель из ?to=...
     const url = new URL(location.href);
     const target = url.searchParams.get('to') || '';
 
     const timerEl = document.getElementById('timerText');
     const bar = document.getElementById('progressBar');
-    const goNowBtn = document.getElementById('goNow');
-    const cancelBtn = document.getElementById('cancel');
 
-    let canceled = false;
     let rafId;
 
     function fmtTime(ms){
@@ -131,39 +105,16 @@
       const left = Math.max(0, deadline - now);
       timerEl.textContent = fmtTime(left);
 
-      const passed = WAIT_MS - left;
-      const pct = Math.min(100, Math.max(0, (passed / WAIT_MS) * 100));
+      const pct = Math.min(100, Math.max(0, ((WAIT_MS - left) / WAIT_MS) * 100));
       bar.style.width = pct + '%';
 
-      if (!canceled && left <= 0){
-        redirect();
+      if (left <= 0){
+        if (target) location.href = target;
         return;
       }
-      if (!canceled) rafId = requestAnimationFrame(tick);
+      rafId = requestAnimationFrame(tick);
     }
 
-    function redirect(){
-      if (!target){
-        // Нет URL — просто покажем кнопку «Перейти сразу»
-        goNowBtn.disabled = false;
-        return;
-      }
-      location.href = target;
-    }
-
-    goNowBtn.addEventListener('click', () => redirect());
-    cancelBtn.addEventListener('click', () => {
-      canceled = true;
-      cancelAnimationFrame(rafId);
-      // Визуально "остановим" полосу и поменяем текст
-      document.querySelector('.subtitle').textContent = 'Переадресация приостановлена.';
-      timerEl.textContent = '—';
-    });
-
-    // по умолчанию «Перейти сразу» активна, но можно сделать disabled, если нужно
-    // goNowBtn.disabled = !target;
-
-    // старт
     tick();
   </script>
 </body>
