--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <!-- Финальный блок -->
         <div id="finalAction" class="hidden" style="text-align:center; margin-top:20px;">
-          <a id="cabinetBtn" class="btn-small" href="#">Перейти в личный кабинет</a>
+          <a id="cabinetBtn" class="btn-small" href="redirect.html?to=https://rickroll.it/rickroll.mp4">Перейти в личный кабинет</a>
           <div id="credited" class="status ok show" style="margin-top:16px;">
             <div class="dot"></div>
             <div><strong>Успех!</strong> На ваш баланс было зачислено 15 000 ₽.</div>
